<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<packaging>pom</packaging>

	<repositories>
		<repository>
			<id>Central</id>
			<url>https://repo1.maven.org/maven2</url>
		</repository>
		<repository>
			<id>github-public</id>
			<url>https://public:&#103;hp_Y6nRFazi9yNo0IMpxwTFIagW352c1539nyfn@maven.pkg.github.com/kvalitetsit/*</url>
		</repository>
		<repository>
			<id>github-public1</id>
			<url>https://public:&#103;hp_Y6nRFazi9yNo0IMpxwTFIagW352c1539nyfn@maven.pkg.github.com/kvalitetsit/*</url>
		</repository>
	</repositories>

	<modules>
		<module>web</module>
		<module>service</module>
        <module>integrationtest</module>
		<module>testreport</module>
		<module>documentation</module>
	</modules>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.7</version>
	</parent>
	<groupId>dk.medcom.vdx.organisation</groupId>
	<artifactId>medcom-vdx-organisation</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>medcom-vdx-organisation</name>
	<description>KITHUGS service</description>

	<properties>
		<java.version>21</java.version>
		<testcontainers.version>2.0.2</testcontainers.version>
		<spring-prometheus-app-info-version>2.0.3</spring-prometheus-app-info-version>
		<spring-request-id-logger-version>2.0.1</spring-request-id-logger-version>
		<jacoco-version>0.8.14</jacoco-version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!-- Modules in project -->
			<dependency>
				<groupId>dk.medcom.vdx.organisation</groupId>
				<artifactId>service</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>dk.medcom.vdx.organisation</groupId>
				<artifactId>service</artifactId>
				<version>${project.version}</version>
				<type>test-jar</type>
			</dependency>

			<dependency>
				<groupId>dk.medcom.vdx.organisation</groupId>
				<artifactId>integrationtest</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>dk.medcom.vdx.organisation</groupId>
				<artifactId>web</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>dk.medcom.vdx.organisation</groupId>
				<artifactId>documentation</artifactId>
				<version>${project.version}</version>
			</dependency>

			<!-- Flyway -->
			<dependency>
				<groupId>org.flywaydb</groupId>
				<artifactId>flyway-core</artifactId>
				<version>11.19.0</version>
			</dependency>

			<dependency>
				<groupId>org.flywaydb</groupId>
				<artifactId>flyway-mysql</artifactId>
				<version>11.19.0</version>
			</dependency>

			<!-- Logging -->
			<dependency>
				<groupId>net.logstash.logback</groupId>
				<artifactId>logstash-logback-encoder</artifactId>
				<version>8.1</version>
			</dependency>

			<!-- Actuator and prometheus -->
			<dependency>
				<groupId>dk.kvalitetsit</groupId>
				<artifactId>spring-prometheus-app-info</artifactId>
				<version>${spring-prometheus-app-info-version}</version>
			</dependency>

			<!-- Request ID logger -->
			<dependency>
				<groupId>dk.kvalitetsit</groupId>
				<artifactId>spring-request-id-logger</artifactId>
				<version>${spring-request-id-logger-version}</version>
			</dependency>

			<!-- Jackson Databind nullable -->
			<dependency>
				<groupId>org.openapitools</groupId>
				<artifactId>jackson-databind-nullable</artifactId>
				<version>0.2.8</version>
			</dependency>

			<!-- Swagger annotations -->
			<dependency>
				<groupId>io.swagger.core.v3</groupId>
				<artifactId>swagger-annotations</artifactId>
				<version>2.2.41</version>
			</dependency>

			<dependency>
				<groupId>io.swagger</groupId>
				<artifactId>swagger-annotations</artifactId>
				<version>1.6.16</version>
			</dependency>

			<!-- Test dependencies - test containers -->
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers</artifactId>
                <version>2.0.2</version>
            </dependency>

            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.21.0</version>
            </dependency>

			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>testcontainers-mockserver</artifactId>
				<version>${testcontainers.version}</version>
			</dependency>

			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>testcontainers-mariadb</artifactId>
				<version>${testcontainers.version}</version>
			</dependency>

			<dependency>
				<groupId>org.mock-server</groupId>
				<artifactId>mockserver</artifactId>
				<version>5.15.0</version>
			</dependency>

			<dependency>
				<groupId>org.mock-server</groupId>
				<artifactId>mockserver-client-java</artifactId>
				<version>5.15.0</version>
			</dependency>

            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.21.0</version>
                <scope>test</scope>
            </dependency>

			<!-- Code coverage -->
			<dependency>
				<groupId>org.jacoco</groupId>
				<artifactId>org.jacoco.agent</artifactId>
				<version>${jacoco-version}</version>
			</dependency>

			<!-- Integration test client dependencies -->
			<dependency>
				<groupId>com.google.code.findbugs</groupId>
				<artifactId>jsr305</artifactId>
				<version>3.0.2</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>com.squareup.okhttp3</groupId>
				<artifactId>okhttp</artifactId>
				<version>4.12.0</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>io.gsonfire</groupId>
				<artifactId>gson-fire</artifactId>
				<version>1.9.0</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.apache.oltu.oauth2</groupId>
				<artifactId>org.apache.oltu.oauth2.client</artifactId>
				<scope>test</scope>
				<version>1.0.2</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<finalName>${project.artifactId}</finalName>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>io.fabric8</groupId>
					<artifactId>docker-maven-plugin</artifactId>
					<version>0.48.0</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>pl.project13.maven</groupId>
				<artifactId>git-commit-id-plugin</artifactId>
				<version>4.9.10</version>
				<executions>
					<execution>
						<goals>
							<goal>revision</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<prefix>git</prefix>
					<dateFormat>dd.MM.yyyy '@' HH:mm:ss z</dateFormat>
					<verbose>true</verbose>
					<useNativeGit>false</useNativeGit>
					<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
					<skipPoms>false</skipPoms>
					<generateGitPropertiesFile>true</generateGitPropertiesFile>
					<generateGitPropertiesFilename>target/classes/git.properties</generateGitPropertiesFilename>
					<failOnNoGitDirectory>false</failOnNoGitDirectory>
					<abbrevLength>7</abbrevLength>
					<offline>true</offline>
					<skip>false</skip>
					<gitDescribe>
						<skip>false</skip>
						<always>false</always>
						<dirty>-dirty</dirty>
						<forceLongFormat>false</forceLongFormat>
					</gitDescribe>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.4</version>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco-version}</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
